--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
-.App {
+.app {
   text-align: center;
+  background-color: #282c34;
+  width: 100vw;
+  height: 100vh;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
