--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,30 @@
-.app {
+#root {
   text-align: center;
   background-color: #282c34;
+  position: absolute;
   width: 100vw;
   height: 100vh;
   color: white;
 }
+.header{
+  font-family: 'Varela Round', sans-serif;
+  letter-spacing: -1px;
+  font-size: 3rem;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+.domain-wrapper{
+  width: 100%;
+  
+}
+.search-bar{
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
 
+}
+.css-14el2xx-placeholder{
+  padding-left: 5px;
+  text-align: left;
+}
