--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
-#root {
-  text-align: center;
-  background-color: #282c34;
+.app {
   position: absolute;
   width: 100vw;
   height: 100vh;
-  color: white;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #202124;
 }
+/* .app::before{
+  content: '';
+  background: url('../public/weather-bg.jpg') no-repeat center center/cover ;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+} */
 .header{
   font-family: 'Varela Round', sans-serif;
   letter-spacing: -1px;
@@ -13,18 +22,49 @@
   margin-top: 3%;
   margin-bottom: 3%;
 }
-.domain-wrapper{
-  width: 100%;
-  
-}
 .search-bar{
-  border-radius: 50%;
+  margin-top: 3rem;
   margin-left: auto;
   margin-right: auto;
-  width: 500px;
-
+  width: 400px;
 }
-.css-14el2xx-placeholder{
-  padding-left: 5px;
+.css-b62m3t-container{
   text-align: left;
+}
+.css-1s2u09g-control{
+  border-radius: 5rem !important;
+}
+.css-1pahdxg-control{
+  box-shadow: none !important;
+  border-radius: 5rem !important;
+  border-color: hsl(0, 0%, 80%) !important;
+}
+.css-1pahdxg-control:hover{
+  border-color: hsl(0, 0%, 80%) !important;
+}
+.css-26l3qy-menu{
+  color: black;
+  text-align: left;
+  margin-left: 5px !important;
+}
+.css-6j8wv5-Input{
+  padding-top: 0 !important;
+  cursor: text;
+}
+.css-6j8wv5-Input input{
+  padding-top: 3px !important;
+}
+.css-319lph-ValueContainer{
+  padding-top: 0 !important;
+  opacity: 1;
+}
+.css-1qndypt-Input{
+  color: white !important;
+}
+.css-1qndypt-Input input{
+  color: white !important;
+}
+.css-319lph-ValueContainer{
+  color: white !important;
+  padding-left: 13px !important;
 }
