--- a/src/components/current-weather/current-weather.css
+++ b/src/components/current-weather/current-weather.css
@@ -1,11 +1,11 @@
 .weather-wrapper{
-    width: 300px;
+    width: 600px;
     border-radius: 6px;
-    box-shadow: 5px -2px 5px 2px rgb( 0 0 0 /30%);
-    color: #fff;
-    background-color: #333;
+    border: 1px solid black;
+    color: #E8EAED;
+    background-color: #202124;
     margin: 20px auto 0px auto;
-    padding: 0 20px 20px 20px;
+    padding: 5px;
 }
 .top,.bottom{
     display: flex;
